:recycle: Refactor footer to use scss over tailwind and fix footer climbing too high on short pages

--- a/src/homepage/homeFooter/HomeFooterImage.module.scss
+++ b/src/homepage/homeFooter/HomeFooterImage.module.scss
@@ -1,5 +1,6 @@
 .container {
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
+	display: flex;
+	justify-content: center;
+	overflow: hidden;
+	margin-bottom: -200px;
 }
